# athenaCL

./: .gitattributes  .gitignore  404.html  CNAME  Cargo.toml  HISTORY.txt  README.md  ath2017.10.28.03.28.14.mid  build.rs  bundle-mac.sh  chap01.html  chap02.html  chap03.html  chap04.html  chap05.html  chap06.html  chap07.html  getstart01.html  getting-started.html  index.html  print.html  searchindex.js  searchindex.json  setup.py  toc.html  toc.js
athenaCL/: __init__.py  athenaObj.py  athenacl.py
audio/: grains01.aif  metal01.aif
buildDoc/: chap01.sgm  chap02.sgm  chap03.sgm  chap04.sgm  chap05.sgm  chap06.sgm  chap07.sgm  prfc01.sgm
chapter01/: 01-tutorial-1-the-interactive-command-line-interface.html  02-starting-the-athenacl-interpreter.html  03-introduction-to-commands.html  04-viewing-command-names.html  05-executing-commands.html  06-getting-help-for-commands.html  07-configuring-the-user-environment.html
chapter02/: 01-tutorial-2-athenaobjects-and-eventmodes.html  02-introduction-to-athenaobjects.html  03-file-dialogs-in-athenacl.html  03-loading-and-removing-an-athenaobject.html  04-eventmodes-and-eventoutputs.html  04-loading-and-removing-an-athenaobject.html  05-creating-an-eventlist.html  05-eventmodes-and-eventoutputs.html  06-configuring-and-using-csound.html  06-creating-an-eventlist.html  07-configuring-and-using-csound.html  07-saving-and-merging-athenaobjects.html  08-saving-and-merging-athenaobjects.html
chapter03/: 01-tutorial-3-creating-and-editing-paths.html  02-introduction-to-paths.html  03-creating-selecting-and-viewing-pathinstances.html  04-copying-and-removing-pathinstances.html  05-editing-pathinstances.html
chapter04/: 01-tutorial-4-creating-and-editing-textures.html  010-editing-parameterobjects.html  011-editing-rhythm-parameterobjects.html  012-editing-instruments-and-altering-eventmode.html  013-displaying-texture-parameter-values.html  02-introduction-to-textures-and-parameterobjects.html  03-introduction-instrument-models.html  04-selecting-and-viewing-texturemodules.html  05-creating-selecting-and-viewing-textureinstances.html  06-copying-and-removing-texture-instances.html  07-editing-textureinstance-attributes.html  08-muting-textures.html  09-viewing-and-searching-parameterobjects.html
chapter05/: 01-tutorial-5-textures-and-paths.html  02-path-linking-and-pitch-formation-redundancy.html  03-creating-a-path-with-a-duration-fraction.html  04-setting-eventmode-and-creating-a-texture.html  05-pitchmode.html  06-editing-local-octave.html  07-editing-local-field-and-temperament.html
chapter06/: 01-tutorial-6-textures-and-clones.html  02-introduction-to-clones.html  03-creating-and-editing-clones.html
chapter07/: 01-tutorial-7-scripting-athenacl-in-python.html  02-creating-an-athenacl-interpreter-within-python.html  03-creating-athenacl-generator-parameterobjects-within-python.html  (+1 more)
demo/: demo02.xml  demo04.xml  (+3 more)
(+546 files in other folders)
