[package]
name = "athenacl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
iced = { version = "0.12.1", features = ["advanced", "wgpu"] }
indexmap = "2.2.6"
quick-xml = "0.31.0"
rfd = "0.14.0"
rustpython-pylib = { version = "0.3.0", features = ["freeze-stdlib"] }
rustpython-stdlib = "0.3.0"
rustpython-vm = { version = "0.3.0", features = ["freeze-stdlib"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[lints.clippy]
all = "warn"

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 2 # rustpython is too slow in debug mode, so we enable -O2
