[package]
name = "athenacl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
iced = { version = "0.13.1", features = ["advanced", "wgpu"] }
indexmap = "2.5.0"
quick-xml = "0.36.2"
rfd = "0.15.0"
rustpython-pylib = { version = "0.4.0", features = ["freeze-stdlib"] }
rustpython-stdlib = "0.4.0"
rustpython-vm = { version = "0.4.0", features = ["freeze-stdlib"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

[lints.clippy]
all = "warn"

[lints.rust]
missing_docs = "warn"
# unused_crate_dependencies = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 2 # rustpython is too slow in the debug mode
