[package]
name = "athenacl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
async-channel = "2.3.1"
cpal = "0.15.3"
env_logger = "0.11"
iced = { version = "0.13.1", features = ["tokio", "wgpu"] }
iced_aw = "0.11"
iced_fonts = { version = "0.1.1", features = ["nerd"] }
log = "0.4"
midi-player = "0.2.1"
quick-xml = "0.31.0"
rfd = "0.14.0"
rodio = { version = "0.19", features = ["symphonia-all"] }
rustpython-pylib = { version = "0.4.0", features = ["freeze-stdlib"] }
rustpython-stdlib = "0.4.0"
rustpython-vm = { version = "0.4.0", features = ["freeze-stdlib"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.64"

[lints.clippy]
all = "warn"

[lints.rust]
missing_docs = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 2 # rustpython is too slow in debug mode, so we enable -O2
